made the rest of the buttons and the local storage function, need to optimalize my fetch function

--- a/index.css
+++ b/index.css
@@ -37,6 +37,23 @@ h1 {
   filter: brightness(115%);
 }
 
+.cardBtn {
+    transition: transform 0.3s ease;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bold;
+  border-radius: 12px;
+  border: 1.5px solid #000;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+  padding: 10px 20px;
+  background: rgb(124, 215, 230);
+  font-size: 1rem;
+  color: rgb(28, 29, 30);
+}
+
+.cardBtn:hover {
+  background-color: rgb(134, 232, 248);
+}
+
 .favourite-list h3 {
   padding-top: 20px;
   text-align: center;
