trying to add the saved pokemon to my favorite list, still need to add picture and more styling, there is need to simplify the code, made sure you can only save the pokemon once and added the eventListener to saveBtn

--- a/index.css
+++ b/index.css
@@ -71,3 +71,8 @@ h1 {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   border-radius: 50px;
 }
+
+#favourite-pokemon-list {
+  list-style: none;
+  font-family: "Courier New", Courier, monospace;
+}
