--- a/index.css
+++ b/index.css
@@ -38,15 +38,15 @@ h1 {
 }
 
 .cardBtn {
-    transition: transform 0.3s ease;
+  transition: transform 0.3s ease;
   font-family: "Courier New", Courier, monospace;
   font-weight: bold;
   border-radius: 12px;
   border: 1.5px solid #000;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
-  padding: 10px 20px;
+  padding: 8px 18px; 
   background: rgb(124, 215, 230);
-  font-size: 1rem;
+  font-size: 0.8rem; 
   color: rgb(28, 29, 30);
 }
 
@@ -75,4 +75,6 @@ h1 {
 #favourite-pokemon-list {
   list-style: none;
   font-family: "Courier New", Courier, monospace;
+  text-align: center;
+  margin-bottom: 10px;
 }
