--- a/battle.css
+++ b/battle.css
@@ -11,11 +11,6 @@ p {
     margin: 1px;
 }
 
-.pokemon-healthbar-containers {
-position: relative;
-left: 1%;
-}
-
 .pokemonboss-health-container{
     text-align: center;
     position: absolute;
@@ -36,26 +31,62 @@ left: 1%;
 
 .bulbasaur-health {
 width: 200px;
-top: 525%;
-right: 62%;
+top: 63%;
+right: 61%;
 box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 border-radius: 10px;
 }
 
+#bulbasaur-name-txt {
+    position: absolute;
+    top: 63%;
+    right: 64%; 
+}
+
+#bulbasaur-health-txt {
+    position: absolute;
+    top: 65%; 
+    right: 65%; 
+}
+
+#squirtle-name-txt {
+    position: absolute;
+    top: 57%;
+    right: 49%; 
+}
+
+#squirtle-health-txt {
+    position: absolute;
+    top: 59%; 
+    right: 50%; 
+}
+
 .squirtle-health {
     width: 200px;
-    top: 480%;
-    right: 47%;
+    top: 57%;
+    right: 46%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
      border-radius: 10px;
 }
 
+#ditto-name-txt {
+    position: absolute;
+    top: 60%;
+    right: 80%; 
+}
+
+#ditto-health-txt {
+    position: absolute;
+    top: 62%; 
+    right: 80%; 
+}
+
 .ditto-health {
     width: 200px;
-    top: 480%;
-    right: 77%;
+    top: 60%;
+    right: 76%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-    border-radius: 10px;
+     border-radius: 10px;
 }
 
 .totodile-health {
@@ -96,7 +127,6 @@ border-radius: 10px;
 .boss {
     height: 600px;
 }
-
 
 .boss-container {
     position: absolute;
